--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -27,26 +27,26 @@
                 <p>First, select a target credit score. See what actions are available to reach this potential new score.</p>
             </section>
             <section>
-                <div>
+                <div id='credit-scores'>
                     <h3>Credit Scores</h3>
                     <div class='flex-row'>
-                        <div>
+                        <div class='flex-grow-1'>
                             <h5>TransUnion</h5>
-                            <div>673</div>
+                            <div class='score'>673</div>
                         </div>
-                        <div>
+                        <div class='flex-grow-1'>
                             <h5>Equifax</h5>
-                            <div>673</div>
+                            <div class='score'>673</div>
                         </div>
-                        <div>
+                        <div class='flex-grow-1'>
                             <h5>Experian</h5>
-                            <div>673</div>
+                            <div class='score'>673</div>
                         </div>
                     </div>
                 </div>
-                <div class='grid'>
+                <div id='target-score'>
                     <h3>Target Score</h3>
-                    <form>
+                    <form class='target-score-grid'>
                         <input type='text' />
                         <input type='range' min='1' max='100'>
                         <input type='submit' value='Set Target' />
@@ -60,16 +60,16 @@
                 </section>
                 <section>
                     <h3>Potential Impact</h3>
-                    <div class='flex-row'>
-                        <div class='flex-row'>
+                    <div id='potential-impact-inner-container' class='flex-row'>
+                        <div class='flex-row flex-grow-1'>
                             <div>679</div>
                             <div>Up</div>
                         </div>
-                        <div class='flex-row'>
+                        <div class='flex-row flex-grow-1'>
                             <div>679</div>
                             <div>Up</div>
                         </div>
-                        <div class='flex-row'>
+                        <div class='flex-row flex-grow-1'>
                             <div>679</div>
                             <div>Up</div>
                         </div>
@@ -77,28 +77,28 @@
                 </section>
                 <section>
                     <div class='flex-row'>
-                        <h5>Action</h5>
-                        <h5>Account</h5>
-                        <h5>TransUnion</h5>
-                        <h5>Equifax</h5>
-                        <h5>Experian</h5>
+                        <h5 class='flex-grow-1'>Action</h5>
+                        <h5 class='flex-grow-1'>Account</h5>
+                        <h5 class='flex-grow-1'>TransUnion</h5>
+                        <h5 class='flex-grow-1'>Equifax</h5>
+                        <h5 class='flex-grow-1'>Experian</h5>
                     </div>
-                    <div>
-                        <div>Make an On-time Payment</div>
+                    <div id='payment-container'>
+                        <div id='payment-container-label'>Make an On-time Payment</div>
                         <div>BK OF AMER #456 9356 ***</div>
                         <p>Making a payment on this acount could result in a 3 point score increase.</p>
                         <div class='flex-row'>
-                            <div class='grid'>
+                            <div class='grid flex-grow-1'>
                                 <div>TransUnion</div>
                                 <div>up</div>
                                 <div>3 points</div>
                             </div>
-                            <div class='grid'>
+                            <div class='grid flex-grow-1'>
                                 <div>TransUnion</div>
                                 <div>up</div>
                                 <div>3 points</div>
                             </div>
-                            <div class='grid'>
+                            <div class='grid flex-grow-1'>
                                 <div>TransUnion</div>
                                 <div>up</div>
                                 <div>3 points</div>
