improved slider styling

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -65,7 +65,7 @@
                     <h3 class='section-title'>Target Score</h3>
                     <form class='target-score-grid'>
                         <input class='margin-bottom-20' id='score-input-field' type='text' maxlength='3' />
-                        <input class='margin-bottom-50' id='score-slider' type='range' min='1' max='100'>
+                        <input class='margin-bottom-50' id='score-slider' type='range' min='1' max='100' value='60'>
                         <input id='score-submit' type='submit' value='Set Target' />
                     </form>
                 </div>
