reformat Potential Impact as a Grid with column gap

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -75,28 +75,31 @@
                 <!-- POTENTIAL IMPACT -->
                 <section class='margin-bottom-35'>
                     <h3 class='section-title'>Potential Impact</h3>
-                    <div id='potential-impact-inner-container' class='flex-row'>
-                        <div class='flex-row flex-grow-1'>
-                            <div class='score'>679</div>
-                            <div class='flex-centered-align-center points'>           
-                                <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
-                                <p class='potential-points'>11</p>
+                    <div id='potential-impact-inner-container'>
+                            <div class='flex-row flex-grow-1'>
+                                <div class='score'>679</div>
+                                <div class='flex-centered-align-center points'>           
+                                    <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
+                                    <p class='potential-points'>11</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class='flex-row flex-grow-1'>
-                            <div class='score'>679</div>
-                            <div class='flex-centered-align-center points'>           
-                                <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
-                                <p class='potential-points'>11</p>
+                            <div class='flex-row flex-grow-1 border'>
+                                <div class='score'>679</div>
+                                <div class='flex-centered-align-center points'>           
+                                    <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
+                                    <p class='potential-points'>11</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class='flex-row flex-grow-1'>
-                            <div class='score'>679</div>
-                            <div class='flex-centered-align-center points'>           
-                                <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
-                                <p class='potential-points'>11</p>
+                            <div class='flex-row flex-grow-1'>
+                                <div class='score'>679</div>
+                                <div class='flex-centered-align-center points'>           
+                                    <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
+                                    <p class='potential-points'>11</p>
+                                </div>
                             </div>
-                        </div>
+                            <div class='flex-grow-1'>TransUnion</div>
+                            <div class='flex-grow-1'>Equifax</div>
+                            <div class='flex-grow-1'>Experian</div>
                     </div>
                 </section>
                 <!-- RECOMMENDED ACTIONS -->
