--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -72,8 +72,8 @@
                 <div id='target-score' class='margin-bottom-50'>
                     <h3 class='section-title'>Target Score</h3>
                     <form class='target-score-grid'>
-                        <input class='margin-bottom-20' id='score-input-field' type='text' maxlength='3' value='670'/>
-                        <input class='margin-bottom-50' id='score-slider' type='range' min='1' max='100' value='60'>
+                        <input id='score-input-field' class='margin-bottom-20' type='text' maxlength='3' value='670'/>
+                        <input id='score-slider' class='margin-bottom-50' type='range' min='1' max='100' value='60'>
                         <input id='score-submit' type='submit' value='Set Target' />
                     </form>
                 </div>
