--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -119,7 +119,7 @@
                 <!-- ACTIONS -->
                 <section id='actions'>
                     <!-- MENU 2 -->
-                    <div id='menu-2' class='flex-row'>
+                    <div id='menu-2'>
                         <h5 class='flex-grow-1'>Action</h5>
                         <h5 class='flex-grow-1'>Account</h5>
                         <h5 class='flex-grow-1'>TransUnion</h5>
@@ -128,35 +128,37 @@
                     </div>
                     <!-- ACTIONS/PAYMENTS CONTAINERS -->
                     <div class='payment-container'>
-                        <div class='payment-container-label padding-10 flex-row'>
+                        <div class='payment-type'>
                             <img src='./assets/alerts-icon.png' />
                             <h4 class='payment-title'>Make an On-time Payment</h4>
                         </div>
-                        <div class='padding-10'>BK OF AMER #456 9356 ***</div>
-                        <p class='padding-10 fw-400'>Making a payment on this account could result in a 3 point score increase.</p>
-                        <div class='flex-row'>
-                            <div class='flex-column-align-left flex-grow-1 padding-10'>
-                                <div class='fw-400'>TransUnion</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div>
-                            <div class='flex-column-align-left flex-grow-1 padding-10'>
-                                <div class='fw-400'>Equifax</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div>
-                            <div class='flex-column-align-left flex-grow-1 padding-10'>
-                                <div class='fw-400'>Experian</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>3 pts</div>
-                                </div>
+                        <div class='account'>BK OF AMER #456 9356 ***</div>
+                        <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
+                        
+                        <div class='bureau-1 bureau'>
+                            <div class='fw-400'>TransUnion</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                <div class='points'>3 pts</div>
                             </div>
                         </div>
+
+                        <div class='bureau-2 bureau'>
+                            <div class='fw-400'>Equifax</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div>
+
+                        <div class='bureau-3 bureau'>
+                            <div class='fw-400'>Experian</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div>
+                        
                     </div>
                 </section> 
                 <!-- end actions section -->
