--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -126,10 +126,10 @@
                         <h5 class='flex-grow-1'>Equifax</h5>
                         <h5 class='flex-grow-1'>Experian</h5>
                     </div>
-                    <!-- ACTIONS/PAYMENTS CONTAINERS -->
+                    <!-- PAYMENTS CONTAINERS -->
                     <div class='payment-container'>
                         <div class='payment-type'>
-                            <img src='./assets/alerts-icon.png' />
+                            <img src='./assets/alerts-icon.png' width='27px' height='27px' />
                             <h4 class='payment-title'>Make an On-time Payment</h4>
                         </div>
                         <div class='account'>BK OF AMER #456 9356 ***</div>
@@ -157,9 +157,75 @@
                                 <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
                                 <div class='points'>3 pts</div>
                             </div>
+                        </div> 
+                    </div> <!-- end payment-container -->
+                    <!-- PAYMENTS CONTAINERS -->
+                    <div class='payment-container'>
+                        <div class='payment-type'>
+                            <img src='./assets/alerts-icon.png' width='27px' height='27px' />
+                            <h4 class='payment-title'>Increase credit limit</h4>
                         </div>
+                        <div class='account'>BK OF AMER #456 9356 ***</div>
+                        <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
                         
-                    </div>
+                        <div class='bureau-1 bureau'>
+                            <div class='fw-400'>TransUnion</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div>
+
+                        <div class='bureau-2 bureau'>
+                            <div class='fw-400'>Equifax</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div>
+
+                        <div class='bureau-3 bureau'>
+                            <div class='fw-400'>Experian</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div> 
+                    </div> <!-- end payment-container -->
+                    <!-- PAYMENTS CONTAINERS -->
+                    <div class='payment-container bottom-payment-container'>
+                        <div class='payment-type'>
+                            <img src='./assets/alerts-icon.png' width='27px' height='27px' />
+                            <h4 class='payment-title'>Pay down debt</h4>
+                        </div>
+                        <div class='account'>BK OF AMER #456 9356 ***</div>
+                        <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
+                        
+                        <div class='bureau-1 bureau'>
+                            <div class='fw-400'>TransUnion</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div>
+
+                        <div class='bureau-2 bureau'>
+                            <div class='fw-400'>Equifax</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div>
+
+                        <div class='bureau-3 bureau'>
+                            <div class='fw-400'>Experian</div>
+                            <div class='flex-row'>
+                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                <div class='points'>3 pts</div>
+                            </div>
+                        </div> 
+                    </div> <!-- end payment-container -->
+
                 </section> 
                 <!-- end actions section -->
             </section> 
