style/hide pi-bureau-name, margin-left to footer

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -104,9 +104,9 @@
                                     <p class='potential-points'>11</p>
                                 </div>
                             </div>
-                            <div class='flex-grow-1'>TransUnion</div>
-                            <div class='flex-grow-1'>Equifax</div>
-                            <div class='flex-grow-1'>Experian</div>
+                            <div class='pi-bureau-name'>TransUnion</div>
+                            <div class='pi-bureau-name'>Equifax</div>
+                            <div class='pi-bureau-name'>Experian</div>
                     </div>
                 </section>
 
@@ -233,7 +233,7 @@
 
             <!-- FOOTER -->
             <footer id='footer'>
-                <div class='disclaimer'>
+                <div class='footer-disclaimer'>
                     <p><span style='font-weight: 500'>Important: </span>Based on taking these actions, the best day to check for score increases is the 28th of the month. Allow up to three months to achieve full results.<br />These recommendations are only estimates.  They do not take into consideration future factors like balance changes and late payments.</p>
                 </div>
                 <div class='footer-score'>
