add score-scale values to slider

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -71,7 +71,13 @@
                 <h3 class='section-title'>Target Score</h3>
                 <form id='target-score-form'>
                     <input id='score-input-field' type='text' maxlength='3' value='670'/>
-                    <input id='score-slider' type='range' min='1' max='100' value='60'>
+                    <input id='score-slider' type='range' min='1' max='100' value='60' />
+                    <div id='score-scale'>
+                        <div class='scale-increment'>300</div>
+                        <div class='scale-increment'>560</div>
+                        <div class='scale-increment'>750</div>
+                        <div class='scale-increment'>850</div>
+                    </div>
                     <input id='score-submit' type='submit' value='Set Target' />
                 </form>
             </div>
