prepare to create subcontainers for first 4 grid fractions

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -88,7 +88,7 @@
                 <!-- POTENTIAL IMPACT -->
                 <section id='potential-impact'>
                     <h3 class='section-title'>Potential Impact</h3>
-                    <div id='potential-impact-inner-container'>
+                    <div id='pi-inner-container'>
                             <div class='flex-row flex-grow-1'>
                                 <div class='score'>679</div>
                                 <div class='flex-centered-align-center points'>           
@@ -116,7 +116,7 @@
                     </div>
                 </section>
 
-                <!-- RECOMMENDED ACTIONS -->
+                <!-- RECOMMENDED ACTIONS HEADER -->
                 <section id='ra-header'>
                     <h3 class='section-title'>Recommended Actions</h3>
                     <p>These recommendations are only estimates. They do not take into consideration future factors like balance changes and late payments.</p>
@@ -126,19 +126,23 @@
                 <section id='actions'>
                     <!-- MENU 2 -->
                     <div id='menu-2'>
+                        <!-- group as class='menu-2-subcontainer' -->
                         <h5 class='flex-grow-1'>Action</h5>
                         <h5 class='flex-grow-1'>Account</h5>
+                        <!-- group -->
                         <h5 class='flex-grow-1'>TransUnion</h5>
                         <h5 class='flex-grow-1'>Equifax</h5>
                         <h5 class='flex-grow-1'>Experian</h5>
                     </div>
                     <!-- PAYMENTS CONTAINERS -->
                     <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
                         <div class='payment-type'>
                             <img src='./assets/alerts-icon.png' width='27px' height='27px' />
                             <h4 class='payment-title'>Make an On-time Payment</h4>
                         </div>
                         <div class='account'>BK OF AMER #456 9356 ***</div>
+                        <!-- group -->
                         <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
                         
                         <div class='bureau-1 bureau'>
