convert credit-scores to grid, added column-gaps, realized need to right-side subcontainer grids

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -44,7 +44,7 @@
             <!-- CREDIT SCORES -->
             <div id='credit-scores'>
                 <h3 class='section-title'>Credit Scores</h3>
-                <div class='flex-row'>
+                <div id='cs-grid'>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
                             <img src='./assets/transunion.svg'></img>
