implement pc-subcontainer-2 with column-gap 29, re-added outer padding20 and set slider width 100%

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class='wrapper'>
-        <div class='main-grid setwidth'>
+        <div class='main-grid setwidth padding-20'>
             <!-- SCORESIGHT -->
             <section id='header'>
                 <div id='ScoreSight'>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <!-- PAYMENTS CONTAINER -->
-                    <div class='payment-container'>
+                    <div class='payment-container bottom-payment-container'>
                         <!-- group as class='pc-subcontainer'-->
                         <div class='pc-subcontainer'>
                             <div class='payment-type pc-padding'>
@@ -147,33 +147,37 @@
                                 <h4 class='payment-title'>Make an On-time Payment</h4>
                             </div>
                             <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
                         </div>
                         <!-- group -->
-                        <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
-                        
-                        <div class='bureau-1 bureau pc-padding'>
-                            <div class='payments-bureau-name'>TransUnion</div>
-                            <div class='flex-row'>
-                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
-                                <div class='points'>3 pts</div>
+                        <div class='pc-subcontainer-3'>
+                            <div class='bureau-1 bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <div class='points'>3 pts</div>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class='bureau-2 bureau pc-padding'>
-                            <div class='payments-bureau-name'>Equifax</div>
-                            <div class='flex-row'>
-                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                <div class='points'>2 pts</div>
+                            <div class='bureau-2 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class='bureau-3 bureau pc-padding'>
-                            <div class='payments-bureau-name'>Experian</div>
-                            <div class='flex-row'>
-                                <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                <div class='points'>3 pts</div>
-                            </div>
-                        </div> 
+                            <div class='bureau-3 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 3 -->
                     </div> 
                     <!-- end payment-container -->
 
