--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -15,19 +15,19 @@
 </head>
 <body>
     <div class='wrapper'>
-        <div class='main-grid setwidth padding-20'>
+        <div class='main-grid setwidth padding-outer'>
             <!-- SCORESIGHT -->
             <section id='header'>
                 <div id='ScoreSight'>
                     <h2>ScoreSight</h2>
-                    <h5>Understand your score potential and the actions needed to get there.</h5>
+                    <p>Understand your score potential and the actions needed to get there.</p>
                 </div>
             </section>
             
            
             <!-- TOGGLE MENU -->
-            <section id='toggle-menu' class='flex-row'>
-                <div id='target-score-menu-item' class='tdm-item-active border'>
+            <section id='toggle-menu'>
+                <div id='target-score-menu-item' class='tdm-item-active'>
                     <h4>Target Score</h4>
                 </div>
                 <div id='debt-payment-menu-item' class='tdm-item-inactive'>
@@ -138,6 +138,135 @@
                             <h5 class='flex-grow-1'>Experian</h5>
                         </div>
                     </div>
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer'>
+                            <div class='payment-type pc-padding'>
+                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
+                                <h4 class='payment-title'>Make an On-time Payment</h4>
+                            </div>
+                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-3'>
+                            <div class='bureau-1 bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau-2 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau-3 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 3 -->
+                    </div> 
+                    <!-- end payment-container -->
+
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer'>
+                            <div class='payment-type pc-padding'>
+                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
+                                <h4 class='payment-title'>Make an On-time Payment</h4>
+                            </div>
+                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-3'>
+                            <div class='bureau-1 bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau-2 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau-3 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 3 -->
+                    </div> 
+                    <!-- end payment-container -->
+
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer'>
+                            <div class='payment-type pc-padding'>
+                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
+                                <h4 class='payment-title'>Make an On-time Payment</h4>
+                            </div>
+                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-3'>
+                            <div class='bureau-1 bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau-2 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau-3 bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 3 -->
+                    </div> 
+                    <!-- end payment-container -->
+
                     <!-- PAYMENTS CONTAINER -->
                     <div class='payment-container bottom-payment-container'>
                         <!-- group as class='pc-subcontainer'-->
